update Notification